[package]
edition = "2021"
name = "rust-coin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
bincode = "1.3.3"
clap = {version = "3.0.0", features = ["derive"]}
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.79"
sha2 = "0.10.1"
sled = "0.34.7"
thiserror = "1.0.30"
tokio = {version = "1.0", features = ["full"]}
